[package]
name = "cliclack"
version = "0.3.7"

authors = ["Alexander Fadeev <fadeevab.com@gmail.com>"]
categories = ["command-line-interface"]
description = "Beautiful, minimal, opinionated CLI prompts inspired by the Clack NPM package."
documentation = "https://docs.rs/cliclack"
edition = "2021"
homepage = "https://github.com/fadeevab/cliclack"
keywords = ["prompt", "cli", "command-line", "terminal", "console"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fadeevab/cliclack"

[dependencies]
console = "0.15.8"
indicatif = "0.18.3"
once_cell = "1.18.0"
strsim = "0.11.1"
textwrap = "0.16.0"
zeroize = { version = "1.6.0", features = ["derive"] }

[dev-dependencies]
ctrlc = "3.4.2"
rand = "0.8.5"
