[package]
name = "cliclack"
version = "0.3.9"

authors = ["Alexander Fadeev <fadeevab.com@gmail.com>"]
categories = ["command-line-interface"]
description = "Beautiful, minimal, opinionated CLI prompts inspired by the Clack NPM package."
documentation = "https://docs.rs/cliclack"
edition = "2021"
homepage = "https://github.com/fadeevab/cliclack"
keywords = ["prompt", "cli", "command-line", "terminal", "console"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fadeevab/cliclack"

exclude = [
    # Contains unnecessary binary blobs for the resulting crate.
    "media/**",
]

[dependencies]
console = "0.16"
indicatif = "0.18"
once_cell = "1.21"
strsim = "0.11"
textwrap = "0.16"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
ctrlc = "3.5"
rand = { version = "0.10", features = ["thread_rng"] }
